--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,17 @@
 [tool.poetry]
 name = "testcontainer-python-keycloak"
-version = "0.2.0"
+version = "0.3.0"
 description = ""
 authors = ["Max Fröhlich <max.froehlich@serviceware.de>"]
 
 [tool.poetry.dependencies]
-python = "^3.6"
-testcontainers = { version = "^3.0" }
+python = "^3.8"
+testcontainers = "^3.0.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.3.4"
-flake8 = "^3.7.9"
-black = "^19.10b0"
+pytest = "^7.1.2"
+flake8 = "^5.0.4"
+black = "^22.6.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
